--- a/ClientBaseAppMVC/ClientBaseAppMVC/Views/Client/Index.cshtml
+++ b/ClientBaseAppMVC/ClientBaseAppMVC/Views/Client/Index.cshtml
@@ -5,7 +5,7 @@
 			<h1 class="text-primary">Clients list</h1>
 		</div>
 		<div class="col-6 text-end">
-			<a asp-controller="" asp-action="" class="btn btn-primary">
+			<a asp-controller="Client" asp-action="Create" class="btn btn-primary">
 				Create New Client
 			</a>
 		</div>
