--- a/ClientBaseAppMVC/ClientBaseAppMVC/Views/Client/Edit.cshtml
+++ b/ClientBaseAppMVC/ClientBaseAppMVC/Views/Client/Edit.cshtml
@@ -1,9 +1,9 @@
-﻿@model Client
-<h1>Create Client</h1>
+﻿@model Client 
+
 <form method="post">
 	<div class="border p-3 mt-4">
 		<div class="row pb-2">
-			<h2 class="text-primary">Create Client</h2>
+			<h2 class="text-primary">Edit Client</h2>
 		</div>
 		<div class="mb-3">
 			<label asp-for="Name"></label>
@@ -32,7 +32,7 @@
 		</div>
 		<div class="row" >
 			<div class="col-6">
-				<button type="submit" class="btn btn-primary form-control">Create</button>
+				<button type="submit" class="btn btn-primary form-control">Update</button>
 			</div>
 			<div class="col-6">
 				<a asp-controller="Client" asp-action="Index" class="btm btn-secondary border form-control">Back to List</a>
