--- a/ClientBaseAppMVC/ClientBaseAppMVC/Views/Client/Index.cshtml
+++ b/ClientBaseAppMVC/ClientBaseAppMVC/Views/Client/Index.cshtml
@@ -53,7 +53,7 @@
 						<a asp-controller="Client" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">Edit</a>
 					</div>
 					<div class="w-75 btn-group" role="group">
-						<a asp-controller="Client" asp-action="Delete" class="btn btn-delete mx-2">Delete</a>
+						<a asp-controller="Client" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-delete mx-2">Delete</a>
 					</div>
 				</td>
 			</tr>
